--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is starter pack for creating Dapp"
+      content="This project will give unique id for users that can be user as a digital passport"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- bootstarp cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <title>Starter pack</title>
+    <title>verifiable credits</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
